--- a/templates/book.html
+++ b/templates/book.html
@@ -52,6 +52,8 @@
             background-color: #0056b3;
             border-color: #0056b3;
         }
+        
+        
     </style>
 </head>
 <body>
@@ -60,8 +62,8 @@
         <div class="row">
             {% for book in book %}
                 <div class="col-md-4">
-                    <div class="card" style="width: 18rem;">
-                        <img src="{{ book.image.url }}" class="card-img-top" alt="{{ book.title }}">
+                    <div class="card">
+                        <img src="{{ book.image.url }}" class="card-img-top" alt="{{ book.title }}" height="350px" , width="500px">
                         <div class="card-body">
                            <h5 class="card-title">{{ book.tittle }}</h5>
                             <p class="card-text">
