--- a/templates/book_detail.html
+++ b/templates/book_detail.html
@@ -6,7 +6,7 @@
 <div class="card mb-3" style="max-width: 5400px;">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="{{ book.image.url }}" class="img-fluid rounded-start" alt="Book Image">
+      <img src="{{ book.image.url }}" class="img-fluid rounded-start" alt="Book Image" height="350px">
     </div>
     <div class="col-md-8">
       <div class="card-body">
