--- a/templates/book.html
+++ b/templates/book.html
@@ -63,7 +63,7 @@
             {% for book in book %}
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="{{ book.image.url }}" class="card-img-top" alt="{{ book.title }}" height="350px" , width="500px">
+                        <img src="{{ book.image.url }}" class="card-img-top" alt="{{ book.title }}" height="350px" width="500px">
                         <div class="card-body">
                            <h5 class="card-title">{{ book.tittle }}</h5>
                             <p class="card-text">
