--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 {% if request.user.is_authenticated %}
-                    <a class="dropdown-item" href="#">Account</a>
+                    <a class="dropdown-item" href="{% url 'akk' %}">Account</a>
                     <a class="dropdown-item" href="{% url 'logout' %}">Log Out</a>
                 {% else %}
                     <a class="dropdown-item" href="{% url 'login' %}">Login</a>
