--- a/templates/book_detail.html
+++ b/templates/book_detail.html
@@ -15,7 +15,7 @@
         <p class="author"><strong>Author:</strong> {{ book.author.first_name }}</p>
         <p class="price"><strong>Price:</strong> ${{ book.price }}</p>
         <p class="date"><strong>Date:</strong> {{ book.created_d }}</p>
-        <button class="btn btn-primary">Card</button>
+        <a href="{% url akk %}"><button class="btn btn-primary">Sotib olish</button></a>
       </div>
     </div>
   </div>
