--- a/templates/base.html
+++ b/templates/base.html
@@ -52,10 +52,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="http://127.0.0.1:8000/book/">Books</a>
+                    <a class="nav-link" href="{% url 'books' %}">Books</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="http://127.0.0.1:8000/auth/">Authors</a>
+                    <a class="nav-link" href="{% url 'author' %}">Authors</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0" method="POST">
