--- a/templates/book.html
+++ b/templates/book.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
 {% extends 'base.html' %}
 {% block title %}Books{% endblock %}
 {% load static %}
@@ -52,15 +49,14 @@
             background-color: #0056b3;
             border-color: #0056b3;
         }
-        
-        
+
+
     </style>
-</head>
 <body>
 {% block content %}
     <div class="container">
         <div class="row">
-            {% for book in book %}
+            {% for book in books %}
                 <div class="col-md-4">
                     <div class="card">
                         <img src="{{ book.image.url }}" class="card-img-top" alt="{{ book.title }}" height="350px" width="500px">
